# snka-learning

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  PROJECT_NAME_.opam  README.md  dune-project  setup.sh  snkal.opam  test.sh
.github/workflows/: ci.yml
firewalls/: cve_0230.ml  dune  example.ml  remote.ml
firewalls/non_ml/: buggy  buggy_web_app_fw.c  web_app_fw.py
lib/: dune  logging.ml  lstar.ml  netkat.ml  oracle.ml  packet.ml
